--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,23 @@
 server:
-  port: 8083
+  port: 8080
   error:
     include-message: always
     include-binding-errors: always
-keycloak:
-  server:
-    contextPath: /auth
-    adminUser:
-      username: bael-admin
-      password: pass
-    realmImportFile: baeldung-realm.json
+#keycloak:
+#  server:
+#    contextPath: /auth
+#    adminUser:
+#      username: bael-admin
+#      password: pass
+#    realmImportFile: baeldung-realm.json
 
 spring:
-  security:
-    oauth2:
-      resource-server:
-        jwt:
-          issuer-uri: http://localhost:8083/auth/realms/baeldung
-          jwk-set-uri: http://localhost:8083/auth/realms/baeldung/protocol/openid-connect/certs
+  #  security:
+  #    oauth2:
+  #      resource-server:
+  #        jwt:
+  #          issuer-uri: http://localhost:8083/auth/realms/baeldung
+  #          jwk-set-uri: http://localhost:8083/auth/realms/baeldung/protocol/openid-connect/certs
   datasource:
     password: pas
     url: jdbc:h2:mem:newsler
