--- a/.github/workflows/gradle-ubuntu-jdk17.yml
+++ b/.github/workflows/gradle-ubuntu-jdk17.yml
@@ -16,13 +16,12 @@ on:
       - develop
       - release/*
   schedule:
-    - cron: "0 12 * * 5" # Runs at 12:00 UTC on Fri.
+    - cron: '0 12 * * 5' # Runs at 12:00 UTC on Fri.
 
 permissions:
   contents: read
 
 jobs:
-  name: 'Build ubuntu-latest'
   build:
     runs-on: ubuntu-latest
     steps:
