Add docker, remove H2, add OracleDB, todo: safe params read

--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,14 @@ plugins {
     id 'org.springframework.boot' version '2.7.4'
     id 'io.spring.dependency-management' version '1.0.14.RELEASE'
     id 'java'
-    id 'war'
 }
 
 group = 'pl.newsler'
 version = '0.0.1'
 sourceCompatibility = '17'
 
-war {
-    archiveName 'newsler.war'
+bootJar {
+    archiveFileName = 'dockerized-newsler.jar'
 }
 
 configurations {
@@ -41,8 +40,6 @@ dependencies {
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
-
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
