--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,45 +1,30 @@
 server:
-  port: 8080
+#  port: 8080
   error:
     include-message: always
     include-binding-errors: always
 
 spring:
-  h2:
-    console:
-      path: /h2-console
-      enabled: true
   datasource:
-    username: sa
-    password: pass
-    url: jdbc:h2:mem:newsler
-    driverClassName: org.h2.Driver
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-        format_sql: true
-    show-sql: true
+    driverClassName: oracle.jdbc.driver.OracleDriver
 
-  mail:
-    host: localhost
-    port: 1025
-    username: admin
-    password: admin
-
-    properties:
-      mail:
-        smtp:
-          ssl:
-            trust: "*"
-          auth: true
-          starttls:
-            enable: true
-          connectiontimeout: 5000
-          timeout: 3000
-          writetimeout: 5000
+#  mail:
+#    host: localhost
+#    port: 1025
+#    username: admin
+#    password: admin
+#
+#    properties:
+#      mail:
+#        smtp:
+#          ssl:
+#            trust: "*"
+#          auth: true
+#          starttls:
+#            enable: true
+#          connectiontimeout: 5000
+#          timeout: 3000
+#          writetimeout: 5000
 
 logging:
   pattern:
