--- a/.github/workflows/gradle-ubuntu-jdk17.yml
+++ b/.github/workflows/gradle-ubuntu-jdk17.yml
@@ -18,9 +18,6 @@ on:
   schedule:
     - cron: '0 12 * * 5' # Runs at 12:00 UTC on Fri.
 
-permissions:
-  contents: read
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -33,8 +30,7 @@ jobs:
           distribution: 'temurin'
           java-package: 'jdk'
           cache: 'gradle'
-      - run: ./gradlew build --no-daemon
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Build with Gradle
-        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-        with:
-          arguments: build
+        run: ./gradlew build
