--- a/build.gradle
+++ b/build.gradle
@@ -20,39 +20,40 @@ configurations {
 
 repositories {
     mavenCentral()
+    google()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-    implementation 'org.springframework.boot:spring-boot-starter-jersey'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.5'
+    implementation 'org.springframework.boot:spring-boot-starter-data-rest:2.7.5'
     implementation 'org.springframework.boot:spring-boot-starter-security:2.7.5'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.5'
+    implementation 'org.springframework.boot:spring-boot-starter-jersey:2.7.5'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.7.5'
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'com.auth0:java-jwt:4.2.1'
-    implementation 'com.h2database:h2'
     implementation 'org.yaml:snakeyaml:1.33'
+    implementation 'com.h2database:h2'
 
     compileOnly 'org.projectlombok:lombok'
 
-//    runtimeOnly 'org.apache.tomcat.embed:tomcat-embed-core:10.1.1'
     runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
     runtimeOnly 'com.h2database:h2'
-
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    annotationProcessor 'org.projectlombok:lombok'
 
     testAnnotationProcessor 'org.projectlombok:lombok'
 
     testCompileOnly 'org.projectlombok:lombok'
 
+    testImplementation ('com.github.javafaker:javafaker:1.0.2') { exclude module: 'snakeyaml' }
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
     testImplementation 'org.springframework.security:spring-security-test:5.7.5'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
     testImplementation 'org.projectlombok:lombok'
+    testImplementation 'org.yaml:snakeyaml:1.33'
 }
 
 tasks.named('test') {
