--- a/build.gradle
+++ b/build.gradle
@@ -59,8 +59,12 @@ dependencies {
     testImplementation('com.github.javafaker:javafaker:1.0.2') { exclude module: 'snakeyaml' }
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
     testImplementation 'org.springframework.security:spring-security-test:5.7.5'
+    testImplementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    testImplementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    testImplementation 'com.google.code.gson:gson:2.10'
     testImplementation 'org.projectlombok:lombok'
     testImplementation 'org.yaml:snakeyaml:1.33'
+
 }
 
 test {
