--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,9 @@ server:
   error:
     include-message: always
     include-binding-errors: always
+  tomcat:
+    accesslog:
+      enabled: true
 
 spring:
   h2:
@@ -21,7 +24,6 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
-    show-sql: true
 
   mail:
     host: localhost
