Exception response handling needs rework, SSL added, JWTFilter rework aswell but 403 or blank 200 is still returned

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,9 @@
 server:
-  port: 8080
+  port: 8443
   error:
     include-message: always
     include-binding-errors: always
+    include-exception: true
   tomcat:
     accesslog:
       enabled: true
