--- a/build.gradle
+++ b/build.gradle
@@ -31,15 +31,17 @@ jacoco {
 
 dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest:3.0.1'
-    implementation 'org.springframework.boot:spring-boot-starter-security:3.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-webflux:3.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-jersey:3.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-web:3.0.1'
+
+    implementation 'org.springframework.boot:spring-boot-starter-security:3.0.1'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
     implementation('com.github.javafaker:javafaker:1.0.2') { exclude module: 'snakeyaml' }
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
@@ -49,7 +51,7 @@ dependencies {
     implementation 'org.yaml:snakeyaml:1.33'
     implementation 'com.h2database:h2'
 
-    compileOnly 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok:1.18.24'
 
     runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
     runtimeOnly 'com.h2database:h2'
