Mail module tests, w/o controller, response for RestTemplate is null - should be fixed

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ jacoco {
 }
 
 dependencies {
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.1'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
 
