--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,8 @@ server:
     include-message: always
     include-binding-errors: always
     include-exception: true
+    whitelabel:
+      enabled: true
   tomcat:
     accesslog:
       enabled: true
@@ -25,6 +27,10 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
+  mvc:
+    throw-exception-if-no-handler-found: true
+  thymeleaf:
+    check-template-location: false
 
   mail:
     host: localhost
