--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
     testImplementation 'org.springframework.security:spring-security-test:5.7.5'
     testImplementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    testImplementation 'uk.org.webcompere:system-stubs-core:2.0.1'
     testImplementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    testImplementation 'org.mockito:mockito-inline:3.12.4'
     testImplementation 'com.google.code.gson:gson:2.10'
     testImplementation 'org.projectlombok:lombok'
     testImplementation 'org.yaml:snakeyaml:1.33'
