--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "$name$",
-  "version": "$version$",
+  "name": "newsler-mail-server-mock",
+  "version": "1.0.0",
   "dependencies": {
-    $END$
+    "maildev": "^2.0.5"
   }
 }
