--- a/.github/workflows/gradle-windows-jdk17.yml
+++ b/.github/workflows/gradle-windows-jdk17.yml
@@ -33,8 +33,17 @@ jobs:
           distribution: 'temurin'
           java-package: 'jdk'
           cache: 'gradle'
+      - name: Install Node modules
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+      - name: Run maildev container
+        run: ./gradlew runMailDevContainer
       - run: ./gradlew build --no-daemon
       - name: Build with Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: build
+      - name: Stop and delete maildev container
+        run: ./gradlew deleteMailDevContainer
