--- a/.github/workflows/gradle-windows-jdk17.yml
+++ b/.github/workflows/gradle-windows-jdk17.yml
@@ -1,6 +1,5 @@
 # This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support documentation.
+# They are provided by a third-party and are governed by separate terms of service, privacy policy, and support documentation.
 #
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
@@ -12,9 +11,9 @@ name: Newsler CI with Gradle on Windows
 on:
   pull_request:
     branches:
-      - master
-      - develop
-      - release/*
+    - master
+    - develop
+    - release/*
   schedule:
     - cron: '0 12 * * 5' # Runs at 12:00 UTC on Fri.
 
