--- a/.github/workflows/gradle-build-ubuntu-latest.yml.yml
+++ b/.github/workflows/gradle-build-ubuntu-latest.yml.yml
@@ -6,7 +6,7 @@
 #
 # For java see: https://github.com/actions/setup-java
 
-name: Newsler CI with Gradle on Windows
+name: Newsler CI with Gradle on Ubuntu
 
 on:
   pull_request:
