--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ src/main/java/pl/newsler/devenv/H2Configuration.java
 HELP.md
 .gradle
 build/
+/node_modules/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
