--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 
     implementation('com.github.javafaker:javafaker:1.0.2') { exclude module: 'snakeyaml' }
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
+    implementation 'net.htmlparser.jericho:jericho-html:3.4'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.jetbrains:annotations:23.1.0'
