--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -33,10 +33,10 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
-        format_sql: true
-    show-sql: false
   mvc:
     throw-exception-if-no-handler-found: true
+    problemdetails:
+      enabled: true
   thymeleaf:
     check-template-location: false
 
@@ -58,14 +58,13 @@ spring:
           timeout: 3000
           writetimeout: 5000
     test-connection: true
+  jackson:
+    property-naming-strategy: SNAKE_CASE
 
 logging:
   level:
     org:
       springframework:
-        web: trace
         http: trace
   pattern:
     dateformat: "dd/MM/yyyy HH:mm:ss"
-
-debug: true
