--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok:1.18.24'
 
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server:3.0.5'
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-rest:3.0.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.1'
